upgrade to newest ggvis and vega and do a writeup with slidify and pure

--- a/css/local.css
+++ b/css/local.css
@@ -16,3 +16,13 @@
   margin: 0;
   z-index: 10;
 }
+
+
+.header h1,h2,h3 {
+  font-family: "Roboto", sans-serif;  
+}
+
+
+body, p {
+  font-family: "Oxygen", sans-serif;
+}
